examples/test/testpolicy7947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7947
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key7: value25
      key19: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value37
      podSelector:
        matchLabels:
          key40: value38
          key8: value36
